# cpp-mdn-gtest-extension

./: CMakeLists.txt  CMakePresets.json  Dockerfile
cmake/: utils.cmake
configurations/: c_standard_streams_redirection_config.h.in  clang_tidy.yml  cpp_gtest_extension_config.h.in  mdn_gtest_extension_config.h.in
src/: CMakeLists.txt
src/gtest_extension/: CMakeLists.txt  gtest_extension.cpp
src/gtest_extension/include/: gtest_extension.hpp
src/gtest_extension/include/mdn/: gtest_extension.hpp
test/: CMakeLists.txt
test/gtest_extension_test/: CMakeLists.txt  gtest_extension_test.cpp
